Testing with actual zone values.

--- a/configurator/config.json
+++ b/configurator/config.json
@@ -4,8 +4,8 @@
     "zones": [
         {
             "id": 1,
-            "desc": "SAMPLE ZONE #1",
-            "gpio_valve": 0,
+            "desc": "REAL ZONE #1",
+            "gpio_valve": 16,
             "gpio_flm": 0,
             "pressure_max_psi": 20,
             "delivery_goal_l": 1000 
